--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "django-tastypie"]
-	path = django-tastypie
+	path = lib/django-tastypie
 	url = https://github.com/toastdriven/django-tastypie
