--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "lib/django-tastypie"]
 	path = lib/django-tastypie
-	url = git@github.com:klooff/klooff-django.git
+    url = https://github.com/toastdriven/django-tastypie.git
 [submodule "lib/django-json-rpc"]
 	path = lib/django-json-rpc
 	url = https://github.com/samuraisam/django-json-rpc.git
